Updates demo homepage

--- a/sample-site/front_page.html
+++ b/sample-site/front_page.html
@@ -44,7 +44,7 @@
     <link rel="stylesheet" href="css/custom.css" type="text/css" media="all">
   -->
 
-  <!-- If you have a custome header image or colour -->
+  <!-- If you have a custom header image or colour -->
   <meta name="ebi-localmasthead-color" content="#000">
   <meta name="ebi-localmasthead-image" content="http://wwwdev.ebi.ac.uk/sites/ebi.ac.uk/files/field/image/embl-ebi-background.jpg">
 
@@ -236,23 +236,33 @@
 
           <div class="small-12 columns">
 
-              <h3>Explore EMBL-EBI</h3>
+              <h3>Explore EMBL-EBI and our mission</h3>
 
-              <div class="row small-up-1 medium-up-5">
-                <a href="//www.ebi.ac.uk/services" class="white-color column services-background">
-                  <p><h4><span class="icon icon-generic" data-icon="("></span> Services »</h4></p>
+              <div class="row small-up-1 medium-up-5" data-equalizer>
+                <a href="//www.ebi.ac.uk/services" class="white-color column services-background" data-equalizer-watch>
+                  <p><h4><span class="icon icon-generic" data-icon="("></span> Services »</h4>
+                  <small>To provide freely available data and bioinformatics services to all facets of the scientific community</small>
+                  </p>
                 </a>
-                <a href="//www.ebi.ac.uk/" class="white-color column research-background">
-                  <p><h4><span class="icon icon-generic" data-icon=")"></span> Research »</h4></p>
+                <a href="//www.ebi.ac.uk/" class="white-color column research-background" data-equalizer-watch>
+                  <p><h4><span class="icon icon-generic" data-icon=")"></span> Research »</h4>
+                  <small>To contribute to the advancement of biology through basic investigator-driven research</small>
+                  </p>
                 </a>
-                <a href="//www.ebi.ac.uk/" class="white-color column training-background">
-                  <p><h4><span class="icon icon-generic" data-icon="t"></span> Training »</h4></p>
+                <a href="//www.ebi.ac.uk/" class="white-color column training-background" data-equalizer-watch>
+                  <p><h4><span class="icon icon-generic" data-icon="t"></span> Training »</h4>
+                  <small>To provide advanced bioinformatics training to scientists at all levels</small>
+                  </p>
                 </a>
-                <a href="//www.ebi.ac.uk/" class="white-color column industry-background">
-                  <p><h4><span class="icon icon-generic" data-icon="I"></span> Industry »</h4></p>
+                <a href="//www.ebi.ac.uk/" class="white-color column industry-background" data-equalizer-watch>
+                  <p><h4><span class="icon icon-generic" data-icon="I"></span> Industry »</h4>
+                  <small>To help disseminate cutting-edge technologies to industry</small>
+                  </p>
                 </a>
-                <a href="//www.ebi.ac.uk/" class="white-color column elixir-background">
-                  <p><h4><span class="icon icon-generic" data-icon="%"></span> ELIXIR »</h4></p>
+                <a href="//www.ebi.ac.uk/" class="white-color column elixir-background" data-equalizer-watch>
+                  <p><h4><span class="icon icon-generic" data-icon="%"></span> ELIXIR »</h4>
+                  <small>To support, as an ELIXIR node, the coordination of biological data provision throughout Europe.</small>
+                  </p>
                 </a>
               </div>
 
@@ -389,10 +399,10 @@
             </div>
 
           </div>
-
+  <!-- 
           <hr />
 
-          <div class="row">
+        <div class="row">
 
             <div class="medium-12 columns">
 
@@ -407,11 +417,8 @@
               </ul>
             </div>
 
-
-
-
           </div>
-
+ -->
         </div>
 
 
