--- a/sample-site/research.html
+++ b/sample-site/research.html
@@ -46,7 +46,7 @@
 
   <!-- If you have a custom header image or colour -->
   <meta name="ebi-localmasthead-color" content="#000">
-  <meta name="ebi-localmasthead-image" content="../images/backgrounds/research-green-2.jpg">
+  <meta name="ebi-localmasthead-image" content="https://khawkins98.github.io/EBI-Framework/images/backgrounds/research-green-2.jpg">
 
     <!-- you can replace this with [projectname]-colours.css. See http://www.ebi.ac.uk/web/style/colour for details of how to do this -->
   <!-- also inform ES so we can host your colour palette file -->
