Updates demo home and research

--- a/sample-site/front_page.html
+++ b/sample-site/front_page.html
@@ -46,7 +46,7 @@
 
   <!-- If you have a custom header image or colour -->
   <meta name="ebi-localmasthead-color" content="#000">
-  <meta name="ebi-localmasthead-image" content="http://wwwdev.ebi.ac.uk/sites/ebi.ac.uk/files/field/image/embl-ebi-background.jpg">
+  <meta name="ebi-localmasthead-image" content="https://khawkins98.github.io/EBI-Framework/images/backgrounds/embl-ebi-background.jpg">
 
     <!-- you can replace this with [projectname]-colours.css. See http://www.ebi.ac.uk/web/style/colour for details of how to do this -->
   <!-- also inform ES so we can host your colour palette file -->
@@ -270,7 +270,7 @@
 
           </div>
 
-          <div class="medium-9 columns">
+          <div class="medium-10 columns">
 
             <div class="row">
               <div class="small-12 columns">
@@ -322,21 +322,17 @@
 
           </div>
 
-            <div class="medium-3 columns sidebar">
-              <h3 class="pane-title">Related pages</h3>
+            <div class="medium-2 columns sidebar">
+              <h4 class="pane-title">Related pages</h4>
               <ul>
-                <div class="columns medium-6">
-                  <li class="icon-bullet"><a href="//wwwdev.ebi.ac.uk/services"><span class='icon icon-generic' data-icon='('></span> Services</a></li>
-                  <li class="icon-bullet"><a href="//wwwdev.ebi.ac.uk/research"><span class='icon icon-generic' data-icon=')'></span> Research</a></li>
-                  <li class="icon-bullet"><a href="//wwwdev.ebi.ac.uk/training"><span class='icon icon-generic' data-icon='f'></span> Training</a></li>
-                  <li class="icon-bullet"><a href="//wwwdev.ebi.ac.uk/about/news"><span class='icon icon-generic' data-icon='N'></span> News</a></li>
-                </div>
-                <div class="columns medium-6">
-                  <li class="icon-bullet"><a href="//wwwdev.ebi.ac.uk/about/jobs"><span class='icon icon-generic' data-icon='c'></span> Jobs</a></li>
-                  <li class="icon-bullet"><a href="//wwwdev.ebi.ac.uk/about/travel"><span class='icon icon-generic' data-icon=']'></span> Visit us</a></li>
-                  <li class="icon-bullet"><a href="http://www.embl.de/aboutus/alumni/"><span class='icon icon-generic icon-c8' data-icon='&'></span> Alumni</a></li>
-                  <li class="icon-bullet"><a href="//wwwdev.ebi.ac.uk/about/contact"><span class='icon icon-generic' data-icon='C'></span> Contacts</a></li>
-                </div>
+                <li class="icon-bullet"><a href="//wwwdev.ebi.ac.uk/services"><span class='icon icon-generic' data-icon='('></span> Services</a></li>
+                <li class="icon-bullet"><a href="//wwwdev.ebi.ac.uk/research"><span class='icon icon-generic' data-icon=')'></span> Research</a></li>
+                <li class="icon-bullet"><a href="//wwwdev.ebi.ac.uk/training"><span class='icon icon-generic' data-icon='f'></span> Training</a></li>
+                <li class="icon-bullet"><a href="//wwwdev.ebi.ac.uk/about/news"><span class='icon icon-generic' data-icon='N'></span> News</a></li>
+                <li class="icon-bullet"><a href="//wwwdev.ebi.ac.uk/about/jobs"><span class='icon icon-generic' data-icon='c'></span> Jobs</a></li>
+                <li class="icon-bullet"><a href="//wwwdev.ebi.ac.uk/about/travel"><span class='icon icon-generic' data-icon=']'></span> Visit us</a></li>
+                <li class="icon-bullet"><a href="http://www.embl.de/aboutus/alumni/"><span class='icon icon-generic icon-c8' data-icon='&'></span> Alumni</a></li>
+                <li class="icon-bullet"><a href="//wwwdev.ebi.ac.uk/about/contact"><span class='icon icon-generic' data-icon='C'></span> Contacts</a></li>
               </ul>
 
 
