Front page updates

--- a/sample-site/front_page.html
+++ b/sample-site/front_page.html
@@ -128,7 +128,7 @@
             <h1><a href="[service-url]" title="Back to [service-name] homepage"> The European Bioinformatics Institute</a></h1>
             <div class="row">
 
-              <div class="column large-5">
+              <div class="column large-5 show-for-medium">
                 <h4>The home for big data in biology</h4>
                 <p class="intro">EMBL-EBI provides freely available <a href="/services">data from life science experiments</a>, performs <a href="/research">basic research</a> in computational biology and offers an extensive <a href="/training">user training</a> programme, supporting researchers in academia and <a href="/industry">industry</a>.</p>
               </div>
@@ -238,29 +238,29 @@
 
               <h3>Explore EMBL-EBI and our mission</h3>
 
-              <div class="row small-up-1 medium-up-5" data-equalizer>
+              <div class="row small-up-2 medium-up-5" data-equalizer>
                 <a href="//www.ebi.ac.uk/services" class="white-color column services-background" data-equalizer-watch>
-                  <p><h4><span class="icon icon-generic" data-icon="("></span> Services »</h4>
+                  <p><h4><span class="icon icon-generic" data-icon="("></span> <div class="inline-block">Services »</div></h4>
                   <small>To provide freely available data and bioinformatics services to all facets of the scientific community</small>
                   </p>
                 </a>
                 <a href="//www.ebi.ac.uk/" class="white-color column research-background" data-equalizer-watch>
-                  <p><h4><span class="icon icon-generic" data-icon=")"></span> Research »</h4>
+                  <p><h4><span class="icon icon-generic" data-icon=")"></span> <div class="inline-block">Research »</div></h4>
                   <small>To contribute to the advancement of biology through basic investigator-driven research</small>
                   </p>
                 </a>
                 <a href="//www.ebi.ac.uk/" class="white-color column training-background" data-equalizer-watch>
-                  <p><h4><span class="icon icon-generic" data-icon="t"></span> Training »</h4>
+                  <p><h4><span class="icon icon-generic" data-icon="t"></span> <div class="inline-block">Training »</div></h4>
                   <small>To provide advanced bioinformatics training to scientists at all levels</small>
                   </p>
                 </a>
                 <a href="//www.ebi.ac.uk/" class="white-color column industry-background" data-equalizer-watch>
-                  <p><h4><span class="icon icon-generic" data-icon="I"></span> Industry »</h4>
+                  <p><h4><span class="icon icon-generic" data-icon="I"></span> <div class="inline-block">Industry »</div></h4>
                   <small>To help disseminate cutting-edge technologies to industry</small>
                   </p>
                 </a>
                 <a href="//www.ebi.ac.uk/" class="white-color column elixir-background" data-equalizer-watch>
-                  <p><h4><span class="icon icon-generic" data-icon="%"></span> ELIXIR »</h4>
+                  <p><h4><span class="icon icon-generic" data-icon="%"></span> <div class="inline-block">ELIXIR »</div></h4>
                   <small>To support, as an ELIXIR node, the coordination of biological data provision throughout Europe.</small>
                   </p>
                 </a>
