Fixes to research demo page

--- a/sample-site/research.html
+++ b/sample-site/research.html
@@ -76,7 +76,7 @@
   </div>
 
   <div data-sticky-container>
-    <div id="local-masthead" data-sticky data-sticky-on="disabled" data-top-anchor="180" data-btm-anchor="300000">
+    <div id="local-masthead" data-sticky data-sticky-on="large" data-top-anchor="180" data-btm-anchor="300000">
       <header>
 
         <div id="global-masthead" class="clearfix">
@@ -126,7 +126,7 @@
 
           <!-- local-title -->
           <div class="columns medium-12" id="local-title">
-            <h1><a href="[service-url]" title="Back to [service-name] homepage"> Research</a></h1>
+            <h1><a href="[service-url]" title="Back to [service-name] homepage"><div class="hexagon"><i class="icon icon-generic" data-icon=":"></i></div> Research</a></h1>
             <h4>A unique environment for research</h4>
     
 
