Initial mobile menu work

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
           <!-- local-nav -->
               <nav >
-                <ul class="dropdown menu float-left" data-description="navigational">
+                <ul class="dropdown menu float-left" data-description="navigational" data-dropdown-menu>
                   <li class="active"><a href="documentation.html">Overview</a></li>
                   <li><a data-open="modal-download">Download</a></li>
                   <li><a href="#">Support <i class="icon icon-generic" data-icon="x"></i></a></li>
