--- a/sample-site/brochure.html
+++ b/sample-site/brochure.html
@@ -145,7 +145,7 @@
           <!-- local-nav -->
           
               <nav >
-                <ul class="dropdown menu float-left" data-description="navigational">
+                <ul class="dropdown menu float-left" data-description="navigational" data-dropdown-menu>
                   <li class="first has-children menu-mlid-3055 menu-overview menu-3055"><a href="/about">About EMBL-EBI</a></li>
                   <li class=" has-children menu-mlid-3098 menu-jobs menu-3098"><a href="/about/jobs" title="Opportunities at EMBL-EBI">Available jobs</a></li>
                   <li class="active"><a href="/about/jobs" title="Opportunities at EMBL-EBI">Technical careers at EMBL-EBI</a></li>
@@ -305,10 +305,12 @@
                 </li>
                 <li class="orbit-slide">
                   <div class="text-center industry-background white-color">
+                    <br/><br/>
+                    <img class="" src="http://i.stack.imgur.com/HWnQx.jpg" width="70%" alt="Space">
+                    <br/>
                     <h1 class="">A whole bunch of text</h1>
                     <p>You want tech, we got tech!</p>
-                    <img class="" src="http://i.stack.imgur.com/HWnQx.jpg" width="70%" alt="Space">
-                    <br/><br/><br/><br/>
+                    <br/>
                   </div>
                 </li>
                 <li class="orbit-slide">
