--- a/sample-site/research.html
+++ b/sample-site/research.html
@@ -135,13 +135,12 @@
 
           <!-- local-nav -->
               <nav >
-                <ul class="dropdown menu float-left" data-description="navigational">
+                <ul class="dropdown menu float-left" data-description="navigational" data-dropdown-menu>
                   <li class="first active-trail active menu-mlid-3080 menu-overview active active-trail menu-3080"><a href="/research" class="active-trail active">Overview</a></li>
                   <li class=" menu-mlid-4816 menu-publications menu-4816"><a href="/research/publications">Publications</a></li>
                   <li class=" menu-mlid-3422 menu-research-groups menu-3422"><a href="/research/groups">Research groups</a></li>
                   <li class=" has-children menu-mlid-3407 menu-postdocs menu-3407"><a href="/research/postdocs">Postdocs</a></li>
                   <li class="last has-children menu-mlid-3125 menu-phd-programme menu-3125"><a href="/research/eipp" title="EMBL International PhD Programme at EMBL-EBI">PhD programme</a></li>
-
                 </ul>
                 <ul class="menu dropdown float-right" data-dropdown-menu data-description="functional">
                   <li class="functional"><a href="#"><i class="icon icon-generic" data-icon="d"></i> Share this</a>
@@ -539,10 +538,12 @@
   <!-- The Foundation theme JavaScript -->
   <script src="https://khawkins98.github.io/EBI-Framework/libraries/foundation-6/js/foundation.js"></script>
   <script src="https://khawkins98.github.io/EBI-Framework/js/foundationExtendEBI.js"></script>
+
   <script type="text/JavaScript">$(document).foundation();</script>
   <script type="text/JavaScript">$(document).foundationExtendEBI();</script>
 <!--
    -->
+
 
   
   <!-- Google Analytics details... -->
