Adds "readmore" sample, equalises heights

--- a/index.html
+++ b/index.html
@@ -377,20 +377,20 @@
                 <p>We provide these basic colour palettes that will be of use for many projects:</p>
 
                 <p>
-                <div class="row small-up-1 medium-up-2 large-up-3">
-                  <div class="column ebi-background white-color">
+                <div class="row small-up-1 medium-up-2 large-up-3" data-equalizer>
+                  <div class="column ebi-background white-color" data-equalizer-watch>
                     <p><h4>EBI Petrol</h4> The default. <br/><small>Found at css/embl-petrol-colours.css</small></p>
                   </div>
-                  <div class="column services-background white-color">
-                    <p><h4>Services</h4> Close to EBI colours. <br/><small>Found at css/ebi-services-about-colours.css</small></p>
+                  <div class="column services-background white-color" data-equalizer-watch>
+                    <p><h4>Services</h4> Close to EBI Petrol. <br/><small>Found at css/ebi-services-about-colours.css</small></p>
                   </div>
-                  <div class="column research-background white-color">
+                  <div class="column research-background white-color" data-equalizer-watch>
                     <p><h4>Research</h4> Green. <br/><small>Found at css/ebi-research.colour.css</small></p>
                   </div>
-                  <div class="column training-background white-color">
+                  <div class="column training-background white-color" data-equalizer-watch>
                     <p><h4>Training</h4> Golden. <br/><small>Found at css/ebi-training-colours.css</small></p>
                   </div>
-                  <div class="column industry-background white-color">
+                  <div class="column industry-background white-color" data-equalizer-watch>
                     <p><h4>Industry</h4> Bright blue ocean. <br/><small>Found at css/ebi-industry-colours.css</small></p>
                   </div>
                 </div>
@@ -845,6 +845,24 @@
                     <li class="pagination-next"><a href="#" aria-label="Next page">Next</a></li>
                   </ul>
                 </div>
+
+                <h4>Read more lins</h4>
+                <p>You can read more as a button, if it's a primary call to action, or a link, if it's not as important.</p>
+
+                <div class="" data-equalizer>
+
+                  <div class="columns small-6 callout" data-equalizer-watch>
+                    <h6>High priority read more links</h6>
+                    <a href="#" class="readmore button">Read more</a> 
+                  </div>
+
+                  <div class="columns small-6 callout" data-equalizer-watch>
+                    <h6>Lower priority read more links</h6>
+                    <a href="#" class="readmore">Read more</a>
+                  </div>
+
+                </div>
+
 
               </section>
 
