--- a/sample-site/brochure.html
+++ b/sample-site/brochure.html
@@ -232,7 +232,7 @@
                 <div class="inner">
                   <h2 class="white-color">Work for the greater good</h2>
 
-                  <h6>At the European Bioinformatics Institute (EMBL-EBI), we help scientists realise the potential of ‘big data’ in biology, helping them exploit complex information to make discoveries that benefit mankind. We manage the world’s public biological data and make it freely available to the scientific community via a range of services and tools, perform basic research and provide professional training in bioinformatics.</h6>
+                  <h6 class="white-color">At the European Bioinformatics Institute (EMBL-EBI), we help scientists realise the potential of ‘big data’ in biology, helping them exploit complex information to make discoveries that benefit mankind. We manage the world’s public biological data and make it freely available to the scientific community via a range of services and tools, perform basic research and provide professional training in bioinformatics.</h6>
 
                   <a href="#" class="readmore button">View all jobs</a>
 
