--- a/sample-site/front_page.html
+++ b/sample-site/front_page.html
@@ -130,13 +130,13 @@
             <div class="row">
 
               <div class="column large-5 show-for-medium">
-                <h4>The home for big data in biology</h4>
+                <h4 class="white-color">The home for big data in biology</h4>
                 <p class="intro">EMBL-EBI provides freely available <a href="/services">data from life science experiments</a>, performs <a href="/research">basic research</a> in computational biology and offers an extensive <a href="/training">user training</a> programme, supporting researchers in academia and <a href="/industry">industry</a>.</p>
               </div>
               <div class="column large-7">
                 <form id="ebi_search" action="/ebisearch/search.ebi">
                   <fieldset>
-                    <legend><h4>Find a gene, protein or chemical</h4></legend>
+                    <legend><h4 class="white-color">Find a gene, protein or chemical</h4></legend>
                     <div class="input-group">
                       <input id="query" class="input-group-field" title="EB-eye Search" tabindex="1" type="text" name="query" value="" size="35" maxlength="2048" />
                       <div class="input-group-button">
@@ -241,27 +241,27 @@
 
               <div class="row small-up-2 medium-up-5" data-equalizer>
                 <a href="//www.ebi.ac.uk/services" class="white-color column services-background" data-equalizer-watch>
-                  <p><h4><span class="icon icon-generic" data-icon="("></span> <div class="inline-block">Services »</div></h4>
+                  <p><h4 class="white-color"><span class="icon icon-generic" data-icon="("></span> <div class="inline-block">Services »</div></h4>
                   <small>To provide freely available data and bioinformatics services to all facets of the scientific community</small>
                   </p>
                 </a>
                 <a href="//www.ebi.ac.uk/" class="white-color column research-background" data-equalizer-watch>
-                  <p><h4><span class="icon icon-generic" data-icon=")"></span> <div class="inline-block">Research »</div></h4>
+                  <p><h4 class="white-color"><span class="icon icon-generic" data-icon=")"></span> <div class="inline-block">Research »</div></h4>
                   <small>To contribute to the advancement of biology through basic investigator-driven research</small>
                   </p>
                 </a>
                 <a href="//www.ebi.ac.uk/" class="white-color column training-background" data-equalizer-watch>
-                  <p><h4><span class="icon icon-generic" data-icon="t"></span> <div class="inline-block">Training »</div></h4>
+                  <p><h4 class="white-color"><span class="icon icon-generic" data-icon="t"></span> <div class="inline-block">Training »</div></h4>
                   <small>To provide advanced bioinformatics training to scientists at all levels</small>
                   </p>
                 </a>
                 <a href="//www.ebi.ac.uk/" class="white-color column industry-background" data-equalizer-watch>
-                  <p><h4><span class="icon icon-generic" data-icon="I"></span> <div class="inline-block">Industry »</div></h4>
+                  <p><h4 class="white-color"><span class="icon icon-generic" data-icon="I"></span> <div class="inline-block">Industry »</div></h4>
                   <small>To help disseminate cutting-edge technologies to industry</small>
                   </p>
                 </a>
                 <a href="//www.ebi.ac.uk/" class="white-color column elixir-background" data-equalizer-watch>
-                  <p><h4><span class="icon icon-generic" data-icon="%"></span> <div class="inline-block">ELIXIR »</div></h4>
+                  <p><h4 class="white-color"><span class="icon icon-generic" data-icon="%"></span> <div class="inline-block">ELIXIR »</div></h4>
                   <small>To support, as an ELIXIR node, the coordination of biological data provision throughout Europe.</small>
                   </p>
                 </a>
